<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imgSelecionada"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnEscolherImagem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/image"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/imgSelecionada"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etNome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/local_name"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/btnEscolherImagem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etCategoria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/etNome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etDescricao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/descriptions"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/etCategoria"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etEndereco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/etDescricao"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etTelefone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:inputType="phone"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/etEndereco"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/etTelefone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
